Fix horizontal overflow on Chrome

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,14 +45,9 @@
 
 html {
     scroll-behavior: smooth;
-
-    /* For some reason, this is needed for Google Chrome */
-    overflow-x: hidden;
 }
 
 body {
-    margin: 0;
-    padding: 0;
     background-color: var(--background-color1);
     color: var(--text-color);
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -72,7 +67,6 @@ section {
     grid-template-columns: 1fr 1fr;
     min-height: 100vh;
     max-height: 200vh;
-    width: 100vw;
 }
 
 section img {
